# robot2D

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  README.md  appveyor.yml
core/: CMakeLists.txt
core/cmake/: FindDeps.cmake  Install.cmake  Options.cmake  Process.cmake
core/include/robot2D/: Config.hpp  Engine.hpp
core/sandbox/: CMakeLists.txt  README.md
core/sandbox/source/: EditorUIScene.cpp  LayerScene.cpp  Render2DScene.cpp  Scene.cpp  TreeHierarchy.hpp  main.cpp
core/src/: CMakeLists.txt  Engine.cpp
core/src/Core/: CMakeLists.txt  Clock.cpp  Cursor.cpp  CursorImpl.cpp  CursorImpl.hpp  Joystick.cpp  Time.cpp  Window.cpp  WindowContext.cpp  WindowImpl.cpp
core/src/Ecs/: Bitmask.cpp  CMakeLists.txt  Component.cpp  Entity.cpp  EntityManager.cpp  Scene.cpp  System.cpp  SystemManager.cpp
core/src/Graphics/: Buffer.cpp  CMakeLists.txt  Drawable.cpp  FrameBuffer.cpp  Image.cpp  ImageAtlas.cpp  Matrix3D.cpp  RenderImpl.cpp  RenderStates.cpp  RenderTarget.cpp  RenderWindow.cpp  Sprite.cpp  Texture.cpp  Transform.cpp  Transformable.cpp  View.cpp
core/src/Util/: CMakeLists.txt  Logger.cpp
core/tests/: CMakeLists.txt
core/tests/Core/: CMakeLists.txt  MessageTests.cpp  Vector2Tests.cpp
core/tests/Ecs/: BitmaskTests.cpp  CMakeLists.txt  SystemTests.cpp
core/tests/Graphics/: CMakeLists.txt  Rect.cpp
editor/: CMakeLists.txt
editor/cmake/: Box2DPatching.cmake  MonoCopyRuntime.cmake  MonoPatching.cmake  copy_to_runtime_path.cmake
editor/cmake/modules/: FindMono.cmake
editor/ext/TinyXML/: CMakeLists.txt
editor/ext/filewatch/: CMakeLists.txt
editor/ext/robot2D-imgui/: CMakeLists.txt  README.md
editor/ext/tinyfiledialog/: CMakeLists.txt
editor/extlibs/TinyXML/: CMakeLists.txt
editor/extlibs/robot2D-imgui/: CMakeLists.txt
editor/incl/editor/: Application.hpp  AssetsPanel.hpp  ComponentPanel.hpp  Components.hpp  Configuration.hpp  Defines.hpp  Editor.hpp  EditorCache.hpp  Errors.hpp  FileApi.hpp  FileManager.hpp  IPanel.hpp  InspectorPanel.hpp  Logger.hpp  Messages.hpp  PanelManager.hpp  Project.hpp  ProjectCreator.hpp  ProjectDescription.hpp  ProjectInspector.hpp  ProjectManager.hpp  ProjectSerializer.hpp  Scene.hpp  SceneCamera.hpp  SceneManager.hpp  ScenePanel.hpp  SceneSerializer.hpp  Systems.hpp  Utils.hpp  ViewportPanel.hpp  Wrapper.hpp
editor/include/editor/: Animation.hpp  AnimationManager.hpp  AnimationParser.hpp  AnimationSystem.hpp  AnimatorSystem.hpp  Application.hpp  ApplicationLogic.hpp  Buffer.hpp  CameraManipulator.hpp  ClassID.hpp  Collider.hpp  CommandStack.hpp  Components.hpp  Configuration.hpp  Defines.hpp  DeletedEntitesRestoreInformation.hpp  DragDropIDS.hpp  Editor.hpp  EditorAssembly.hpp  EditorCache.hpp  EditorCamera.hpp  EditorInteractor.hpp  EditorLogic.hpp  EditorModule.hpp  EditorPresenter.hpp  EditorResourceManager.hpp  EditorRouter.hpp  EditorState.hpp  EditorStyles.hpp  Enum.hpp  Errors.hpp  EventBinder.hpp  Exception.hpp  ExportOptions.hpp  FileApi.hpp  FiledialogAdapter.hpp  Format.hpp  Gizmo.hpp  GraphNodePath.hpp  Guizmo2D.hpp  (+53 more)
editor/res/shaders/: gridShader.frag
editor/scripting/robot2D-ScriptCore/: robot2D-ScriptCore.sln
editor/src/: AnimationManager.cpp  AnimationParser.cpp  AnimationSystem.cpp  AnimatorSystem.cpp  Application.cpp  ApplicationLogic.cpp  AssetsPanel.cpp  Buffer.cpp  CameraManipulator.cpp  Collider.cpp  CommandStack.cpp  ComponentPanel.cpp  Components.cpp  Configuration.cpp  Editor.cpp  EditorAssembly.cpp  EditorCache.cpp  EditorCamera.cpp  EditorInteractor.cpp  EditorLogic.cpp  EditorModule.cpp  EditorPresenter.cpp  EditorResourceManager.cpp  EditorRouter.cpp  EditorStyles.cpp  Errors.cpp  EventBinder.cpp  FileApi.cpp  FileManager.cpp  FiledialogAdapter.cpp  Guizmo2D.cpp  IOReader.cpp  IPanel.cpp  InspectorPanel.cpp  Logger.cpp  MenuPanel.cpp  MessageDispatcher.cpp  ObjectManipulator.cpp  Observer.cpp  PanelManager.cpp  (+36 more)
editor/src/Gui/: Api.cpp  Gui.cpp  OrthoView.cpp  Render.cpp  Util.cpp
editor/src/async/: AnimationTextureSliceTask.cpp  ExportTask.cpp  FontLoadTask.cpp  ImageLoadTask.cpp  SceneLoadTask.cpp
editor/src/commands/: CopyCommand.cpp  DeleteChildEntityCommand.cpp  DeleteEntitiesCommand.cpp  DeleteEntityCommand.cpp  DuplicateCommand.cpp  ICommand.cpp  PasteCommand.cpp
editor/src/panels/: AnimationPanel.cpp  AssetsPanel.cpp  GameViewport.cpp  IPanel.cpp  ITreeItem.cpp  ImGuizmo.cpp  ImGuizmo.h  InspectorPanel.cpp  MenuPanel.cpp  MultiSelection.cpp  ScenePanel.cpp  ScenePanel.cpp~  ScenePanelUI.cpp  TiledMapPanel.cpp  TiledPanel.cpp  ToolbarPanel.cpp  TreeHierarchy.cpp  UtilsPanel.cpp  ViewportPanel.cpp
editor/src/physics/: Box2DPhysicsAdapter.cpp  IPhysics2DAdapter.cpp  b2_user_settings.h.in
editor/src/scripting/: IScriptingEngineService.cpp  MonoClassWrapper.cpp  ScriptEngineData.cpp  ScriptInstance.cpp  ScriptingEngine.cpp  ScriptingGlue.cpp  mono_build_config.h  mono_build_config.h.in
editor/src/serializers/: EntitySerializer.cpp  PrefabSerializer.cpp  ProjectSerializer.cpp  SceneSerializer.cpp
engine/: CMakeLists.txt
engine/include/robot2D/: Application.hpp  Config.hpp  Engine.hpp  OptionConfig.hpp.in  robot2D.hpp
engine/src/: Application.cpp  Engine.cpp  robot2D.cpp
engine/src/Core/: Clock.cpp  Cursor.cpp  CursorImpl.cpp  CursorImpl.hpp  Event.cpp  FileInputStream.cpp  Joystick.cpp  Keyboard.cpp  MessageBus.cpp  Mouse.cpp  Time.cpp  Window.cpp  WindowContext.cpp  WindowImpl.cpp  WindowImpl.hpp
engine/src/Ecs/: Bitmask.cpp  Component.cpp  Entity.cpp  EntityManager.cpp  EventQueue.cpp  Scene.cpp  (+2 more)
sandbox/: CMakeLists.txt
sandbox/features/: CMakeLists.txt
sandbox/source/: Components.cpp  EditorUIScene.cpp  Render2DScene.cpp  Sandbox.cpp  Systems.cpp  TreeHierarchy.cpp  main.cpp
sandbox/src/: Components.cpp  LayerScene.cpp  Render2DScene.cpp  Sandbox.cpp  Scene.cpp  Systems.cpp  main.cpp
tests/: CMakeLists.txt
tests/Core/: MessageBusTests.cpp
tests/Ecs/: BitmaskTests.cpp  CMakeLists.txt  ComponentContainerTests.cpp  EntityManagerTests.cpp  EntityTests.cpp  Mock_System.cpp  SystemTests.cpp
tests/Graphics/: Math3D.cpp
(+459 files in other folders)
